# vlgp

./: .gitattributes  .gitignore  CRCNS grant figure generation.ipynb  Figure.ipynb  Giancarlo.ipynb  Graf.ipynb  Graf2.ipynb  Graf_Analysis.ipynb  LICENSE  Lorenz.ipynb  MANIFEST  PLDS.ipynb  Pipfile  README.md  algebra.py  batch.py  chol.py  constant.py  contributors.txt  convert.py  cov_constrain_m.py  cov_stand_m.py  covariance.py  decompV.py  deprecated.txt  example.ipynb  gaussian.py  graf5FixOmegaFixSigma2At0And90.py  graf5Hyper.py  graf5InferAll.py  graph.py  hyper.py  ichol.c  ichol.h  ichol.py  ichol_V.py  ichol_adadelta.py  ichol_adagrad.py  ichol_constrain_m.py  ichol_constrain_m2.py  (+34 more)
data/: array5.mat.REMOVED.git-id  giancarlo.mat  lds1.h5  lds2.h5  lds3.h5  lds4.h5  lds5.h5  lorenz1.h5  lorenz2.h5  lorenz3.h5  lorenz4.h5  lorenz5.h5
notebook/: lorenz.ipynb  tutorial.ipynb
script/: validation.py
test/: Giancarlo.py  testdecompV.py  testnohyper.py
tests/: test_VLGPModel.py  test_api.py  test_base.py  test_core.py  test_evaluation.py  test_fast.py  test_ichol_gauss.py  test_math.py  test_orth.py  test_util.py
vlgp/: __init__.py  __main__.py  api.py  app.py  base.py  callback.py  constant.py  core.py  cp.py  decorator.py  evaluation.py  experimental.py  fast.py  gmap.py  gp.py  gpfa.py  graph.py  hyper.py  initialization.py  initializer.py  kernel.py  math.py  mathf.py  model.py  model_selection.py  name.py  optimizer.py  plot.py  preprocess.py  profile.py  profiler.py  selection.py  simulation.py  util.py  validation.py  vlgp.py
(+2 files in other folders)
