[tool.poetry]
name = "vlgp"
version = "2019.1.30"
description = "Variational Latent Gaussian Process"
authors = ["yuan <yuan.zhao@stonybrook.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
numpy = "^1.15"
scipy = "^1.2"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
